--- a/shopping-frontend/src/components/new-collections/newcollection.css
+++ b/shopping-frontend/src/components/new-collections/newcollection.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    height: 90vh;
-    margin-top: 80px;
+  margin-bottom: 100px;
+   
 }
 .newcollections h1{
     color: #171717;
